@@ -5,6 +5,8 @@
 	  . and .. by default.
 	* TorrentTracker.cc: Enter/Leave parent for proper debug context.
 	* Torrent.cc: use Enter/Leave for proper debug context.
+	* Torrent.cc: better status when shutting down.
+	* TorrentTracker.{cc,h}: add only leachers when complete.
 
 2013-02-26  Alexander V. Lukyanov <lav@yars.free.net>
 
